<?xml version="1.0" encoding="utf-8"?>

<!--

**************************************************
Nombre: Diego Alonso Ruiz, duber Alberto Imbachí, William David Perdigón
E-mail: diego_aruiza@soy.sena.edu.co, Wdperdigon1227@gmail.com,  duberimbachi7@gmail.com
Fecha: 6 de diciembre de 2024
Android Studio: Java
Descripción: Archivo XML - Correspondiente a la interfaz "Registro" - AcuaTerra
**************************************************

-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.login.RegisterActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="152dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/logo_aquaterra"
                android:src="@drawable/logoacua" />


            <!-- Título del formulario -->

            <TextView
                android:id="@+id/form_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_usuario"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:fontFamily="@font/koulen"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:layout_marginTop="20dp" />

            <!-- Campo de nombre -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/nombre"
                android:backgroundTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo de email -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:backgroundTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:layout_height="50dp"
                    android:inputType="textEmailAddress"
                    android:fontFamily="sans-serif" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo de numero de documento de identidad -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldID"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/ID"
                android:backgroundTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNDI"
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:layout_height="50dp"
                    android:inputType="textEmailAddress"
                    android:fontFamily="sans-serif" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Campo de sede del sena -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldSede"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/sede"
                android:backgroundTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSede"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo de numero de ficha -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldFicha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/n_mero_de_ficha"
                android:backgroundTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFicha"
                    android:backgroundTint="@color/white"
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:layout_height="50dp"
                    android:fontFamily="sans-serif" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo de jornada -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldJornada"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/jornada"
                android:backgroundTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etJornada"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo de nombre de programa -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPrograma"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/Programa"
                android:backgroundTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPrograma"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif" />
            </com.google.android.material.textfield.TextInputLayout>



            <!-- Campo de contraseña -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/contrase_a1"
                android:backgroundTint="@color/colorAccent"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textStyle="bold"
                    android:inputType="textPassword"
                    android:fontFamily="sans-serif" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo de repetir contraseña -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/repetir_contrase_a1"
                android:backgroundTint="@color/colorAccent"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordVerify"
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:fontFamily="sans-serif" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Botón para registrar con sombra y transición animada -->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegistrar"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/registrar"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:elevation="8dp"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
